--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,16 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.batch.initialize-schema=ALWAYS
 spring.batch.job.enabled=false
-server.port = 8086
+
+# Logging levels
+logging.level.root=INFO
+logging.level.org.springframework.batch=DEBUG
+logging.level.com.appt=DEBUG
+
+# Log file configuration
+# Log file location and name
+logging.file.name=application.txt
+logging.file.path=/                 # Directory for the log file
+
+# Ensure logs are overwritten each time
+#logging.logback.rollingpolicy.file-name-pattern=application.txt
